package org.online.movies.dto;

import lombok.Data;

@Data
public class MovieDto extends Media{
    private int duration;
}
